Update: Add UserInterfaceState to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ xcuserdata
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+GAM/GAM.xcodeproj/project.xcworkspace/xcuserdata/jungbin.xcuserdatad/UserInterfaceState.xcuserstate
