--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ GAM/GAM.xcodeproj/project.xcworkspace/xcuserdata/jungbin.xcuserdatad/UserInterfa
 GAM/GAM/Supports/Shared.xcconfig
 GAM/GAM/Supports/Release.xcconfig
 GAM/GAM/Supports/Debug.xcconfig
+GAM/GAM/Plists/GoogleService-Info.plist
